Added handler LeiaLearnsService#getVocabularyKeys for entry point GET "/api/vocabulary". Added handler LeiaLearnsService#getSymbols for entry point GET "/api/vocabulary/{key}/symbol". Added handler LeiaLearnsService#closeVocabulary for entry point GET "/api/vocabulary/{key}/close". Added handler LeiaLearnsService#declareVocabularyOpen for entry point GET "/api/vocabulary/{key}/remain-open". Added event type SymbolDescriptionLengthFixedEvent. Added property SymbolCreatedEvent#vocabulary. Added query model SymbolDocument. Added AllVocabularyKeysQuery. Added VocabularyGetSymbolsByKeyQuery.
