# core/src/main/java/org/leialearns/axon/vocabulary/process/VocabularyEventHandler.java
@@ -2,8 +2,12 @@ package org.leialearns.axon.vocabulary.process;
 
 import lombok.extern.slf4j.Slf4j;
 import org.axonframework.eventhandling.EventHandler;
+import org.leialearns.axon.vocabulary.event.SymbolCreatedEvent;
+import org.leialearns.axon.vocabulary.event.SymbolDescriptionLengthFixedEvent;
 import org.leialearns.axon.vocabulary.event.VocabularyCreatedEvent;
+import org.leialearns.axon.vocabulary.persistence.SymbolDocument;
 import org.leialearns.axon.vocabulary.persistence.VocabularyDocument;
+import org.leialearns.model.Symbol;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
@@ -29,5 +33,25 @@ public class VocabularyEventHandler {
         Query query = Query.query(Criteria.where("id").is(id));
         Update update = Update.update("id", id).set("key", key).set("_class", VocabularyDocument.class.getCanonicalName());
         mongoTemplate.upsert(query, update, VocabularyDocument.class);
+    }
+
+    @EventHandler
+    public void on(SymbolCreatedEvent event) {
+        String vocabulary = event.getVocabulary();
+        Symbol symbol = event.getSymbol();
+        Integer ordinal = symbol.getOrdinal();
+        Query query = Query.query(Criteria.where("vocabulary").is(vocabulary).and("symbol.ordinal").is(ordinal));
+        Update update = Update.update("vocabulary", vocabulary).set("symbol", symbol).set("_class", SymbolDocument.class.getCanonicalName());
+        mongoTemplate.upsert(query, update, SymbolDocument.class);
+    }
+
+    @EventHandler
+    public void on(SymbolDescriptionLengthFixedEvent event) {
+        String vocabulary = event.getVocabulary();
+        Symbol symbol = event.getSymbol();
+        Integer ordinal = symbol.getOrdinal();
+        Query query = Query.query(Criteria.where("vocabulary").is(vocabulary).and("symbol.ordinal").is(ordinal));
+        Update update = Update.update("vocabulary", vocabulary).set("symbol", symbol).set("_class", SymbolDocument.class.getCanonicalName());
+        mongoTemplate.upsert(query, update, SymbolDocument.class);
     }
 }
