# core/src/main/java/org/leialearns/axon/vocabulary/process/VocabularyQueryHandler.java
@@ -2,8 +2,12 @@ package org.leialearns.axon.vocabulary.process;
 
 import lombok.extern.slf4j.Slf4j;
 import org.axonframework.queryhandling.QueryHandler;
+import org.leialearns.axon.vocabulary.persistence.SymbolDocument;
 import org.leialearns.axon.vocabulary.persistence.VocabularyDocument;
+import org.leialearns.axon.vocabulary.query.AllVocabularyKeysQuery;
 import org.leialearns.axon.vocabulary.query.VocabularyByKeyQuery;
+import org.leialearns.axon.vocabulary.query.VocabularyGetSymbolsByKeyQuery;
+import org.leialearns.model.Symbol;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
@@ -25,8 +29,19 @@ public class VocabularyQueryHandler {
 
     @QueryHandler
     public String handle(VocabularyByKeyQuery query) {
-        Query mongoQuery = Query.query(Criteria.where("key").is(query.getKey()));
-        VocabularyDocument vocabularyDocument = mongoTemplate.findOne(mongoQuery, VocabularyDocument.class);
+        Query dbQuery = Query.query(Criteria.where("key").is(query.getKey()));
+        VocabularyDocument vocabularyDocument = mongoTemplate.findOne(dbQuery, VocabularyDocument.class);
         return Optional.ofNullable(vocabularyDocument).map(VocabularyDocument::getId).orElse(null);
+    }
+
+    @QueryHandler
+    public String[] handle(AllVocabularyKeysQuery query) {
+        return mongoTemplate.findAll(VocabularyDocument.class).stream().map(VocabularyDocument::getKey).toArray(String[]::new);
+    }
+
+    @QueryHandler
+    public Symbol[] handle(VocabularyGetSymbolsByKeyQuery query) {
+        Query dbQuery = Query.query(Criteria.where("vocabulary").is(query.getKey()));
+        return mongoTemplate.find(dbQuery, SymbolDocument.class).stream().map(SymbolDocument::getSymbol).toArray(Symbol[]::new);
     }
 }
